deploy/demo-webapp/10-namespace.yaml
#
# Creates a namespaced partition for the demo webapp.
#
apiVersion: v1
kind: Namespace
metadata:
  name: demo-webapp
