deploy/demo-webapp/20-backend.yaml
#
# Creates instances of the backend web service.
#
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    eastlink/app: backend
  namespace: demo-webapp
  name: backend
spec:
  selector:
    matchLabels:
      eastlink/app: backend
  template:
    metadata:
      labels:
        eastlink/app: backend
    spec:
      containers:
        - name: backend
          image: jitsusama/demo-webapp-backend:v1.0.0-b.10
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "100Mi"
          readinessProbe:
            httpGet:
              port: 8080
              path: /healthy
---
#
# Exposes a backend web service load balancer to the rest of the cluster.
#
apiVersion: v1
kind: Service
metadata:
  labels:
    eastlink/app: backend
  namespace: demo-webapp
  name: backend
spec:
  type: NodePort
  ports:
    - port: 8080
      protocol: TCP
  selector:
    eastlink/app: backend
