deploy/demo-webapp/20-storage.yaml
#
# Creates instances of the storage database container.
#
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    eastlink/app: storage
  namespace: demo-webapp
  name: storage
spec:
  selector:
    matchLabels:
      eastlink/app: storage
  template:
    metadata:
      labels:
        eastlink/app: storage
    spec:
      containers:
        - name: storage
          image: mariadb
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /docker-entrypoint-initdb.d
              name: storage-bootstrap
          resources:
            requests:
              memory: "1Gi"
          livenessProbe:
            exec:
              command: ["sh", "-c", "mysqladmin -u$MYSQL_USER -p$MYSQL_PASSWORD ping"]
            initialDelaySeconds: 10
          readinessProbe:
            exec:
              command: ["sh", "-c", "mysql -u$MYSQL_USER -p$MYSQL_PASSWORD -e 'SELECT 1'"]
            initialDelaySeconds: 15
      volumes:
        - name: storage-bootstrap
          configMap:
            name: storage-schemas
---
#
# Allow other containers within the cluster to access the storage database.
#
apiVersion: v1
kind: Service
metadata:
  labels:
    eastlink/app: storage
  namespace: demo-webapp
  name: storage
spec:
  ports:
    - port: 3306
      protocol: TCP
  selector:
    eastlink/app: storage
