deploy/demo-webapp/20-website.yaml
#
# Creates instances of the website server.
#
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    eastlink/app: website
  namespace: demo-webapp
  name: website
spec:
  selector:
    matchLabels:
      eastlink/app: website
  template:
    metadata:
      labels:
        eastlink/app: website
    spec:
      containers:
        - name: website
          image: jitsusama/demo-webapp-website:v1.0.0-b.11
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "100Mi"
          readinessProbe:
            tcpSocket:
              port: 80
---
#
# Exposes a website server load balancer to the rest of the cluster.
#
apiVersion: v1
kind: Service
metadata:
  labels:
    eastlink/app: website
  namespace: demo-webapp
  name: website
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
  selector:
    eastlink/app: website
