deploy/demo-webapp/website.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    eastlink/app: website
  namespace: demo-webapp
  name: website
spec:
  selector:
    matchLabels:
      eastlink/app: website
  template:
    metadata:
      labels:
        eastlink/app: website
    spec:
      containers:
        - name: website
          image: jitsusama/demo-webapp-website:v1.0.0-b.3
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "100Mi"
          readinessProbe:
            httpGet:
              port: 8080
              path: /healthy
---
apiVersion: v1
kind: Service
metadata:
  labels:
    eastlink/app: website
  namespace: demo-webapp
  name: website
spec:
   ports:
     - port:  8080
       protocol: TCP
   selector:
     eastlink/app: website
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    eastlink/app: website
  namespace: demo-webapp
  name: website
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: website
              servicePort: 8080
